fixed breakpoint and z-indexes

--- a/src/timebar/components/playback.module.css
+++ b/src/timebar/components/playback.module.css
@@ -44,7 +44,7 @@
   margin: 0 2.4rem;
 }
 
-@media only screen and (max-width: 72rem) {
+@media only screen and (max-width: var(--timebar-compact-breakpoint)) {
   .playbackActions {
     display: none;
   }
