--- a/src/timebar/components/timeline.module.css
+++ b/src/timebar/components/timeline.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-position-y: 1rem;
   position: relative;
-  z-index: 0;
+  z-index: var(--timebar-z-timeline-bookmark);
 }
 
 .graphContainer {
